--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-5 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-dark btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
+                        <a class="text-dark btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=landinggimnasio">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU CAMBIO</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=landinggimnasio">INICIA TU CAMBIO</a>
                     </li>
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -187,12 +187,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!--<p class="py-1 py-sm-3 py-lg-4 text-white" style="font-size: 2rem;">25 disciplinas diferentes. Descúbrelas!</p>-->
                 <h2 class="py-1 py-sm-3 py-lg-3 text-primary font-weight-bold">Te verás bien, te sentirás mejor.</h2>
                 <div class="hidden-xs-down">
-                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU CAMBIO AHORA</a></p>
+                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=landinggimnasio">INICIA TU CAMBIO AHORA</a></p>
                 </div>
                 <div class="navbar navbar-dark hidden-sm-up" data-toggle="sticky-onscroll">
                   <div class="container no-padding">
                     <div class="navbar-header">
-                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU CAMBIO AHORA</a></p>
+                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=landinggimnasio">INICIA TU CAMBIO AHORA</a></p>
                     </div>
                   </div>
                 </div>
@@ -281,7 +281,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container text-center">
             <div class="row py-5">
                 <div class="col-12">
-                    <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU CAMBIO AHORA</a></p>
+                    <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=landinggimnasio">INICIA TU CAMBIO AHORA</a></p>
                 </div>
             </div>
         </div>
@@ -325,7 +325,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container">
             <div class="row text-center py-5">
                 <div class="col-12">
-                    <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU CAMBIO AHORA</a></p>
+                    <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=landinggimnasio">INICIA TU CAMBIO AHORA</a></p>
                 </div>
             </div>
         </div>
