--- a/salud.html
+++ b/salud.html
@@ -240,7 +240,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a class="nav-link" href="/salud/">Salud</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase hidden-lg-up">
-                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?home=salud">Tarifas</a>
+                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?home=landingsalud">Tarifas</a>
                             </li>
                         </ul>
                     </div>
@@ -249,10 +249,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-5 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="btn text-dark text-uppercase" href="https://www.ictiva.com/tarifas/?home=salud">TARIFAS</a>
+                        <a class="btn text-dark text-uppercase" href="https://www.ictiva.com/tarifas/?home=landingsalud">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down d-none">
-                        <a class="btn text-white text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=salud">INICIA TU ENTRENAMIENTO</a>
+                        <a class="btn text-white text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=landingsalud">INICIA TU ENTRENAMIENTO</a>
                     </li>
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="btn text-white text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -271,7 +271,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="text-white h5 pb-lg-4">Actividad física y comidas saludables para ponerte en forma desde casa.</p>
                     <h2 class="text-primary text-uppercase text-bigger pb-lg-4">PÁSATE A HÁBITOS DE VIDA SALUDABLE CON ICTIVA</h2>
                     <p class="text-white text-medium mb-5">Gracias a nuestras más de 1000 videosesiones, podrás llevar una vida sana y sentirte bien por dentro y por fuera.</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Abónate desde 5,95€ /mes</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a data-scroll href="https://www.ictiva.com/tarifas/?home=landingsalud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Abónate desde 5,95€ /mes</a></p>
                 </div>
                 <div class="col-12 col-md-5 py-3 extra-lg d-none d-md-block hidden-md-down">
                     <div class="widget-home float-right">
@@ -313,7 +313,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <li class="line-height-2 ls"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Herramienta Motivacional</li>
                     <li class="line-height-2 ls mb-4"><i class="fas fa-dot-circle fa-sm text-primary mr-3"></i>Gráficos con evolución</li>
                 </ul>
-                <!-- <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p> -->
+                <!-- <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/usuarios/alta/?home=landingsalud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p> -->
             </div>
         </div>
     </section>
@@ -364,7 +364,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Cuida tu salud con nuestras videosesiones de yoga para hacer en casa, donde tu quieras, las veces que quieras y a la hora que quieras.</p>
                     <p class="mb-3 ls text-medium">Fortalece todo tu cuerpo y organismo, gana flexibilidad y evita el tan temido estrés, practicando con los ejercicios o asanas de esta disciplina milenaria.</p>
                     <p class="mb-3 ls text-medium">A qué esperas a tener unos hábitos de vida saludable y vivir mucho mejor? Es hora de cuidarse, así que no dejes para mañana lo que puedes empezar hoy.</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Abónate desde 5,95€ /mes</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=landingsalud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Abónate desde 5,95€ /mes</a></p>
                 </div>
             </div>
         </div>
@@ -381,7 +381,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Ganarás flexibilidad, reforzarás tu abdomen y espalda y te ayudará a conectar contigo mismo mediante la respiración. Pásate al mundo wellness y disfruta de esta disciplina con nuestras videosesiones.</p>
                     <p class="mb-3 ls text-medium">Tanto si eres principiante en esta disciplina, como si tienes un nivel más avanzado, encontrarás clases para ti, con las que ganarás en salud y podrás llevar un estilo de vida saludable.</p>
                     <p class="mb-3 ls text-medium">Construye tu mundo wellness a través de esta práctica deportiva y verás en pocas semanas todos los beneficios que obtendrá tu organismo. Más flexible, más fuerte, más relajado. A qué esperas?</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Abónate desde 5,95€ /mes</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=landingsalud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Abónate desde 5,95€ /mes</a></p>
                 </div>
             </div>
         </div>
@@ -397,7 +397,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Gloria Sobrero, es fisioterapeuta y especialista en reeducación del suelo pélvico. Este tipo de gimnasia está especialmente indicada para todas aquellas personas que han dado a luz hace pocas semanas y quieren recuperarse del parto lo antes posible. También es un tipo de actividad física que va genial para todos aquellos que quieren reforzar toda la zona del periné, con lo cual también es perfecto para todo aquel que tiene algún tipo de incontinencia urinaria.</p>
                     <p class="mb-3 ls text-medium">Además con este tipo de ejercicios, reforzarás toda la zona lumbar, perderás perímetro abdominal y mejorará la disfunción sexual, ya que gracias a estos ejercicios, podrás reforzar toda tu zona genital.</p>
                     <p class="mb-3 ls text-medium">Ahora es el momento de hacer el cambio y empezar a  obtener salud y bienestar a través de hábitos de vida saludable, como puede ser el caso de esta disciplina wellness o muchas otras, que podréis encontrar en ictiva. Prueba las clases de Gloría, te encantarán!</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Abónate desde 5,95€ /mes</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=landingsalud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Abónate desde 5,95€ /mes</a></p>
                 </div>
             </div>
         </div>
@@ -413,7 +413,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <p class="mb-3 ls text-medium">Una de las zonas de nuestro cuerpo que afecta más comúnmente a nuestro organismo y a nuestra salud es la zona de la espalda. Quién no ha padecido dolor de espalda alguna vez en su vida.</p>
                     <p class="mb-3 ls text-medium">Ahora, con todas estas clases impartidas por nuestros especialistas Jordi Bertran y Gloria Sobrero, podrás realizar de forma fácil y sencilla, estas videosesiones enfocadas a esta zona de tu cuerpo. Podrás tener una espalda más tonificada, fuerte y flexible, con lo cual te podrás librar fácilmente de las famosas y dolorosas contracturas, que tanto nos pueden limitar en el día a día.</p>
                     <p class="mb-3 ls text-medium">Practica esta disciplina wellness y verás como en pocas semanas ganarás en bienestar y salud y podrás llevar una vida sana. Tu decides, seguir con dolor o ganar calidad de vida, ejercitando esta zona un par o tres de veces por semana. Empieza hoy mismo!</p>
-                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Abónate desde 5,95€ /mes</a></p>
+                    <p class="mt-4 py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=landingsalud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Abónate desde 5,95€ /mes</a></p>
                 </div>
             </div>
         </div>
@@ -428,7 +428,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">Dietas y Recetas: Alimentación y Comidas Saludables</h2>
                     <p class="mb-3 ls text-medium">Si para llevar una vida sana, es importante hacer ejercicio físico, más importante si cabe es llevar una alimentación saludable. Hay que recordar, que la comida incide en nuestro aspecto físico en un 60 o 70%, aparte, que nos ayuda a que funcione mejor todo nuestro organismo, lo que nos evita de enfermedades de mucho tipo, como la hipertensión, la diabetes, el colesterol, etc...</p>
                     <p class="mb-3 ls text-medium">Es por ello que en ictiva, tu gimnasio online,  encontrarás un servicio de planes nutricionales por objetivos, denominado “Dietas y Recetas”: perder peso, tonificar nuestro cuerpo, eliminar grasa corporal, fortalecer articulaciones, wellness.... También dispones de un recetario de comidas saludables, que te ayudarán a que te alimentes mucho mejor, llegando a tener así un estilo de vida saludable. Empieza hoy mismo a cuidarte, tu cuerpo te lo agradecerá!</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Abónate desde 5,95€ /mes</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=landingsalud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Abónate desde 5,95€ /mes</a></p>
                 </div>
             </div>
         </div>
@@ -449,7 +449,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <ul class="pr-3 pl-0">
                     <p class="mb-3 ls text-medium">Y no olvides, que además dispones de sala de Fitness, Abdominales, Aeróbic, Boxeo, Steps, Entrenamiento Hiit, CrossFit...y muchas más!</p>
                     <p class="mb-3 ls text-medium">Con ictiva, tu gimnasio online, ganarás en salud y bienestar y conseguirás unos hábitos saludables en poco tiempo. Empezamos?</p>
-                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Abónate desde 5,95€ /mes</a></p>
+                    <p class="py-4 btn bg-primary rounded-0"><a href="https://www.ictiva.com/tarifas/?home=landingsalud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Abónate desde 5,95€ /mes</a></p>
                 </div>
             </div>
         </div>
@@ -458,7 +458,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid banner-primary">
             <div class="row py-3 text-white">
                 <div class="col-lg-12 text-center">
-                    <p class="text-bigger p-3"><a href="https://www.ictiva.com/usuarios/alta/?home=salud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
+                    <p class="text-bigger p-3"><a href="https://www.ictiva.com/usuarios/alta/?home=landingsalud" class="text-uppercase text-white text-center m-0 py-4 px-4 h5">Quiero entrenar gratis</a></p>
                 </div>
             </div>
         </div>
