--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <a class="nav-link" href="/salud/">Salud</a>
                             </li>
                             <li class="nav-item px-2 text-uppercase hidden-lg-up">
-                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?utm_source=ictiva&utm_medium=btn&utm_campaign=menu-btn">Tarifas</a>
+                                <a class="nav-link text-primary" href="https://www.ictiva.com/tarifas/?home=landinggimnasio">Tarifas</a>
                             </li>
                         </ul>
                     </div>
@@ -167,7 +167,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="text-dark btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=landinggimnasio">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
-                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=landinggimnasio">INICIA TU CAMBIO</a>
+                        <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU CAMBIO</a>
                     </li>
                     <li class="bg-darkgrey p-0 py-sm-2 p-xl-2">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/usuarios/login/">Acceso Usuarios</a>
@@ -187,12 +187,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!--<p class="py-1 py-sm-3 py-lg-4 text-white" style="font-size: 2rem;">25 disciplinas diferentes. Descúbrelas!</p>-->
                 <h2 class="py-1 py-sm-3 py-lg-3 text-primary font-weight-bold">Te verás bien, te sentirás mejor.</h2>
                 <div class="hidden-xs-down">
-                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=landinggimnasio">INICIA TU CAMBIO AHORA</a></p>
+                    <p class="my-5"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU CAMBIO AHORA</a></p>
                 </div>
                 <div class="navbar navbar-dark hidden-sm-up" data-toggle="sticky-onscroll">
                   <div class="container no-padding">
                     <div class="navbar-header">
-                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=landinggimnasio">INICIA TU CAMBIO AHORA</a></p>
+                      <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU CAMBIO AHORA</a></p>
                     </div>
                   </div>
                 </div>
@@ -281,7 +281,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container text-center">
             <div class="row py-5">
                 <div class="col-12">
-                    <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=landinggimnasio">INICIA TU CAMBIO AHORA</a></p>
+                    <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU CAMBIO AHORA</a></p>
                 </div>
             </div>
         </div>
@@ -325,7 +325,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container">
             <div class="row text-center py-5">
                 <div class="col-12">
-                    <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=landinggimnasio">INICIA TU CAMBIO AHORA</a></p>
+                    <p class="mb-0"><a class="btn btn-cta btn-primary btn-xl main-btn" href="https://www.ictiva.com/usuarios/alta/?home=gimnasio">INICIA TU CAMBIO AHORA</a></p>
                 </div>
             </div>
         </div>
@@ -341,7 +341,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <li class="footer-list-item" style="font-size:0.9rem;line-height:1.7rem;"><a href="https://www.ictiva.com/gimnasia-en-casa/">¿Qué es ictiva?</a></li>
                         <li class="footer-list-item" style="font-size:0.9rem;line-height:1.7rem;"><a href="#">Servicios</a></li>
                         <li class="footer-list-item" style="font-size:0.9rem;line-height:1.7rem;"><a href="https://www.ictiva.com/nuestro-equipo/">Nuestro equipo</a></li>
-                        <li class="footer-list-item" style="font-size:0.9rem;line-height:1.7rem;"><a href="https://www.ictiva.com/tarifas/">Tarifas</a></li>
+                        <li class="footer-list-item" style="font-size:0.9rem;line-height:1.7rem;"><a href="https://www.ictiva.com/tarifas/?home=landinggimnasio">Tarifas</a></li>
                     </ul>
                 </div>        
                 <div class="col-12 col-sm-4 col-md-2 p-0 mt-4 mt-sm-0">
