--- a/abdominales-en-casa.html
+++ b/abdominales-en-casa.html
@@ -258,7 +258,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-5 no-padding bg-white">
                 <ul class="row justify-content-end mt-3 mt-sm-1 mb-0 mr-1 mr-md-2 p-0 h-100 align-items-start menu-mob">
                     <li class="bg-grey-2 py-0 px-2 py-sm-2 p-xl-2">
-                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">BLACKFRIDAY <span class="text-primary font-weight-bold pl-1">30% Dto</span></a>
+                        <a class="text-dark btn" href="https://www.ictiva.com/tarifas/?home=gimnasio">TARIFAS</a>
                     </li>
                     <li class="bg-primary p-0 py-sm-2 p-xl-2 hidden-md-down">
                         <a class="text-white btn text-uppercase" href="https://www.ictiva.com/tarifas/?home=gimnasio">INICIA TU ENTRENAMIENTO</a>
@@ -380,7 +380,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="homes/img/img-abdominales/abdominales1.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="homes/img/img-abdominales/abdominales1.jpg" class="img-fluid" alt="Cómo sacar abdominales"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">CÓMO SACAR ABDOMINALES</h2>
@@ -398,7 +398,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="homes/img/img-abdominales/abdominales2.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="homes/img/img-abdominales/abdominales2.jpg" class="img-fluid" alt="videos de abdominales - ejercicios"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">VIDEOS DE ABDOMINALES: EJERCICIOS</h2>
@@ -465,7 +465,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="homes/img/img-pilates/pilates3.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="homes/img/img-pilates/pilates3.jpg" class="img-fluid" alt="Pilates online"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">RECOMENDACIONES</h2>
