--- a/salud_old.html
+++ b/salud_old.html
@@ -158,7 +158,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                 <!-- Button trigger modal -->
                 <button type="button" class="btn btn-cta play-btn-wrap" data-toggle="modal" data-target="#exampleModalLong">
-                  <img src="homes/img/iconos/play_icon.png" alt="" class="img-fluid play-btn">                  
+                  <img src="homes/img/iconos/play_icon.png" alt="play video" class="img-fluid play-btn">                  
                   <p class="my-2 text-white text-uppercase btn-text"><small>Mira el video</small></p>
                 </button>
 
