--- a/clases-yoga.html
+++ b/clases-yoga.html
@@ -377,7 +377,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="homes/img/img-landing/yoga-7.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="homes/img/img-landing/yoga-7.jpg" class="img-fluid" alt="Videos de Yoga"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary"><a href="https://www.ictiva.com/ejercicios-en-casa/videos-yoga/" target="_blank" class="text-primary">VIDEOS DE YOGA</a> PARA HACER ONLINE</h2>
@@ -395,7 +395,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="homes/img/img-landing/yoga-6.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="homes/img/img-landing/yoga-6.jpg" class="img-fluid" alt="Clase completa de Yoga"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">DISFRUTA DE ESTA CLASE COMPLETA DE YOGA</h2>
@@ -412,7 +412,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding d-flex align-items-center">
-                    <div><img src="homes/img/img-landing/ictiva-mockup.png" class="img-fluid" alt=""></div>
+                    <div><img src="homes/img/img-landing/ictiva-mockup.png" class="img-fluid" alt="la App de ictiva"></div>
 
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
@@ -447,7 +447,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="homes/img/img-landing/yoga-8.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="homes/img/img-landing/yoga-8.jpg" class="img-fluid" alt="Ejercicios de Yoga"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">RECOMENDACIONES A TENER EN CUENTA</h2>
