--- a/ejercicios-de-abdominales.html
+++ b/ejercicios-de-abdominales.html
@@ -382,7 +382,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="homes/img/img-abdominales/abdominales1.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="homes/img/img-abdominales/abdominales1.jpg" class="img-fluid" alt="Videosesiones para tener un abdomen tonificado"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary"><a href="https://www.ictiva.com/ejercicios-en-casa/videos-abdominales/" class="text-primary">VIDEOSESIONES PARA TENER UN ABDOMEN TONIFICADO</a></h2>
@@ -400,7 +400,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="homes/img/img-abdominales/abdominales2.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="homes/img/img-abdominales/abdominales2.jpg" class="img-fluid" alt="Los mejores videos de abdominales"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">LOS MEJORES EJERCICIOS ABDOMINALES</h2>
