--- a/ejercicios-para-gluteos.html
+++ b/ejercicios-para-gluteos.html
@@ -399,7 +399,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="homes/img/img-nutrition/recetas.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="homes/img/img-nutrition/recetas.jpg" class="img-fluid" alt="Recetas para entrenamiento"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left">El mejor complemento a tu entrenamiento es la nutrición</h2>
@@ -434,7 +434,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="homes/img/land-aerobic/graficos-y-estadisticas.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="homes/img/land-aerobic/graficos-y-estadisticas.jpg" class="img-fluid" alt="Gráficos y estadísticas"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">El motivator te dará la motivación que necesitas para lograr tu objetivo</h2>
@@ -451,7 +451,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="homes/img/img-abdominales/abdominales3.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="homes/img/img-abdominales/abdominales3.jpg" class="img-fluid" alt="Recomendaciones abdominales"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">Lee atentamente estas recomendaciones generales antes de empezar</h2>
