--- a/entrenamiento-en-casa.html
+++ b/entrenamiento-en-casa.html
@@ -399,7 +399,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="homes/img/img-trainer/entrenamiento_chico.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="homes/img/img-trainer/entrenamiento_chico.jpg" class="img-fluid" alt="Entrenamiento personalizado online"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">Cuenta con un entrenamiento personalizado online</h2>
@@ -415,7 +415,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">                
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="homes/img/img-abdominales/abdominales2.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="homes/img/img-abdominales/abdominales2.jpg" class="img-fluid" alt="Videos de abdominales para hecer en casa"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">¿Qué ejercicios para entrenar puedo hacer en casa?</h2>
@@ -451,7 +451,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="homes/img/dietas/quinoa.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="homes/img/dietas/quinoa.jpg" class="img-fluid" alt="Quinoa - Completa el deporte con una buena dieta"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">Completa el deporte con una buena dieta</h2>
