--- a/landing-ictiva-2-original.html
+++ b/landing-ictiva-2-original.html
@@ -292,7 +292,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/Users/jorge/Documents/GitHub/ictiva/homes/img/img-landing/yoga-7.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/Users/jorge/Documents/GitHub/ictiva/homes/img/img-landing/yoga-7.jpg" class="img-fluid" alt="Clases de Yoga online"></div>
                 </div>
                 <div class="col-12 col-md-7 my-5 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left">CLASES DE YOGA ONLINE</h2>
@@ -310,7 +310,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/Users/jorge/Documents/GitHub/ictiva/homes/img/img-landing/yoga-6.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/Users/jorge/Documents/GitHub/ictiva/homes/img/img-landing/yoga-6.jpg" class="img-fluid" alt="Ejercicios de Yoga en casa"></div>
                 </div>
                 <div class="col-12 col-md-7 my-5 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left">EJERCICIOS DE YOGA EN CASA</h2>
@@ -359,7 +359,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="/Users/jorge/Documents/GitHub/ictiva/homes/img/img-landing/yoga-8.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="/Users/jorge/Documents/GitHub/ictiva/homes/img/img-landing/yoga-8.jpg" class="img-fluid" alt="Ejercicios de Yoga"></div>
                 </div>
                 <div class="col-12 col-md-7 my-5 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left">RECOMENDACIONES</h2>
