--- a/landing-ictiva-3-original.html
+++ b/landing-ictiva-3-original.html
@@ -343,7 +343,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="homes/img/img-landing/yoga-7.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="homes/img/img-landing/yoga-7.jpg" class="img-fluid" alt="Clases de Yoga online"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">CLASES DE YOGA ONLINE</h2>
@@ -361,7 +361,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="homes/img/img-landing/yoga-6.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="homes/img/img-landing/yoga-6.jpg" class="img-fluid" alt="Ejercicios de Yoga en casa"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">EJERCICIOS DE YOGA EN CASA</h2>
@@ -377,7 +377,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding d-flex align-items-center">
-                    <div><img src="homes/img/img-landing/ictiva-mockup.png" class="img-fluid" alt=""></div>
+                    <div><img src="homes/img/img-landing/ictiva-mockup.png" class="img-fluid" alt="la App de ictiva"></div>
 
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
@@ -410,7 +410,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="homes/img/img-landing/yoga-8.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="homes/img/img-landing/yoga-8.jpg" class="img-fluid" alt="Ejercicios de Yoga"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">RECOMENDACIONES</h2>
