--- a/sentadillas.html
+++ b/sentadillas.html
@@ -398,7 +398,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="homes/img/piernas/sentadillas1.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="homes/img/piernas/sentadillas1.jpg" class="img-fluid" alt="Aprende a hacer sentadillas"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left"><a href="https://www.ictiva.com/clases-pilates/" class="text-primary">Aprende a hacer los ejercicios sentadillas correctamente</a></h2>
@@ -432,7 +432,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="homes/img/dietas/quinoa.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="homes/img/dietas/quinoa.jpg" class="img-fluid" alt="Quinoa- Encuentra la mejor dieta"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">Encuentra la mejor dieta que se adapta a tus objetivos</h2>
@@ -449,7 +449,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container-fluid">
             <div class="row d-flex flex-row-reverse no-padding">
                 <div class="col-12 col-md-5 text-right no-padding bg-grey-2 d-flex align-items-center">
-                    <div><img src="homes/img/img-abdominales/abdominales3.jpg" class="img-fluid" alt=""></div>
+                    <div><img src="homes/img/img-abdominales/abdominales3.jpg" class="img-fluid" alt="Ejercicios de abdominales"></div>
                 </div>
                 <div class="col-12 col-md-7 my-3 px-3 px-md-5">
                     <h2 class="mb-5 pt-2 text-center text-md-left text-primary">Encuentra la motivación extra que buscas en la comunidad de las redes</h2>
